effects/presentwindows/presentwindows.cpp
@@ -1422,6 +1422,7 @@ void PresentWindowsEffect::setActive(bool active)
         return;
     m_activated = active;
     if (m_activated) {
+        effects->setShowingDesktop(false);
         m_needInitialSelection = true;
         m_closeButtonCorner = (Qt::Corner)effects->kwinOption(KWin::CloseButtonCorner).toInt();
         m_decalOpacity = 0.0;
